# simple-weather-app

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml  server.py  setup.sh
.github/workflows/: ci.yml
deploy/: deployment.yml  services.yaml
flaskr/: __init__.py  helper.py  status.py
flaskr/static/css/: weather.css
flaskr/static/js/: weather.js
static/js/: weather.js
templates/: weather.html
